[gd_scene load_steps=9 format=2]

[ext_resource path="res://корзина_сжато.png" type="Texture" id=1]
[ext_resource path="res://delete.gd" type="Script" id=2]
[ext_resource path="res://корзина_подсветка.png" type="Texture" id=3]
[ext_resource path="res://sound/Собрать и выкинуть предмет2.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/Собрать и выкинуть предмет1.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/Собрать и выкинуть предмет3.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144.844, 103.263 )

[node name="delete" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.75392, 5.15094 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10.7802, 3.08006 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="deleteSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="deleteSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="deleteSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="input_event" from="." to="." method="_on_delete_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_delete_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_delete_mouse_exited"]
